Fix cover subscribe box width issue on mobile screen

--- a/assets/less/site/cover.less
+++ b/assets/less/site/cover.less
@@ -11,6 +11,10 @@
     width: 400px;
   }
 
+  .subscribe-wrapper {
+    max-width: none;
+  }
+
   .subscribe-email {
     border: 0;
   }
@@ -30,6 +34,12 @@
   font-weight: 500;
   line-height: 1.4;
   max-width: 750px;
+}
+
+@media (max-width: 460px) {
+  .site-cover .subscribe {
+    width: 100%;
+  }
 }
 
 @media (max-width: 767px) {
